--- a/webpack06/calc/package.json
+++ b/webpack06/calc/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack build"
+    "build": "webpack build",
+    "dev": "webpack serve"
   },
   "keywords": [],
   "author": "",
